--- a/src/main.css
+++ b/src/main.css
@@ -600,6 +600,10 @@ video {
   z-index: 10;
 }
 
+.z-\[999\]{
+  z-index: 999;
+}
+
 .col-auto{
   grid-column: auto;
 }
@@ -1016,6 +1020,11 @@ video {
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
+}
+
+.text-\[\#333\]{
+  --tw-text-opacity: 1;
+  color: rgb(51 51 51 / var(--tw-text-opacity));
 }
 
 .opacity-50{
