--- a/src/main.css
+++ b/src/main.css
@@ -1022,11 +1022,6 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-\[\#333\]{
-  --tw-text-opacity: 1;
-  color: rgb(51 51 51 / var(--tw-text-opacity));
-}
-
 .opacity-50{
   opacity: 0.5;
 }
@@ -1109,6 +1104,10 @@ ul li a {
 
 .fixed-header .toggle_menu {
   color: #333;
+}
+
+.active_color {
+  color: orange;
 }
 
 .hover\:bg-\[\#323232\]:hover{
