--- a/src/main.css
+++ b/src/main.css
@@ -693,6 +693,10 @@ video {
   margin-top: 6%;
 }
 
+.mt-8{
+  margin-top: 2rem;
+}
+
 .flex{
   display: flex;
 }
@@ -707,6 +711,10 @@ video {
 
 .h-full{
   height: 100%;
+}
+
+.h-auto{
+  height: auto;
 }
 
 .w-\[100px\]{
@@ -749,6 +757,10 @@ video {
   grid-template-rows: repeat(4, minmax(0, 1fr));
 }
 
+.grid-rows-2{
+  grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
 .flex-col{
   flex-direction: column;
 }
@@ -777,6 +789,10 @@ video {
   gap: 12rem;
 }
 
+.gap-32{
+  gap: 8rem;
+}
+
 .rounded{
   border-radius: 0.25rem;
 }
@@ -789,9 +805,18 @@ video {
   border-top-width: 1px;
 }
 
+.border-b-2{
+  border-bottom-width: 2px;
+}
+
 .border-gray-200{
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-zinc-100{
+  --tw-border-opacity: 1;
+  border-color: rgb(244 244 245 / var(--tw-border-opacity));
 }
 
 .bg-\[\#00000080\]{
@@ -819,6 +844,11 @@ video {
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
+}
+
+.bg-\[\#EFFFEF\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 255 239 / var(--tw-bg-opacity));
 }
 
 .bg-cover{
@@ -884,12 +914,36 @@ video {
   padding-top: 3.5rem;
 }
 
+.pb-3{
+  padding-bottom: 0.75rem;
+}
+
+.pb-4{
+  padding-bottom: 1rem;
+}
+
+.pb-5{
+  padding-bottom: 1.25rem;
+}
+
+.pt-10{
+  padding-top: 2.5rem;
+}
+
+.pt-4{
+  padding-top: 1rem;
+}
+
 .text-center{
   text-align: center;
 }
 
 .text-justify{
   text-align: justify;
+}
+
+.align-middle{
+  vertical-align: middle;
 }
 
 .text-2xl{
@@ -948,6 +1002,14 @@ video {
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-\[26px\]{
+  font-size: 26px;
+}
+
+.text-\[55px\]{
+  font-size: 55px;
 }
 
 .font-bold{
@@ -1026,6 +1088,11 @@ video {
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .opacity-50{
   opacity: 0.5;
 }
@@ -1044,6 +1111,10 @@ video {
 
 .duration-700{
   transition-duration: 700ms;
+}
+
+.duration-300{
+  transition-duration: 300ms;
 }
 
 body {
@@ -1124,14 +1195,19 @@ ul li a {
   background-color: rgb(255 255 255 / var(--tw-bg-opacity));
 }
 
+.hover\:text-\[\#000\]:hover{
+  --tw-text-opacity: 1;
+  color: rgb(0 0 0 / var(--tw-text-opacity));
+}
+
 .hover\:text-\[\#e6ae49\]:hover{
   --tw-text-opacity: 1;
   color: rgb(230 174 73 / var(--tw-text-opacity));
 }
 
-.hover\:text-\[\#000\]:hover{
+.hover\:text-orange-400:hover{
   --tw-text-opacity: 1;
-  color: rgb(0 0 0 / var(--tw-text-opacity));
+  color: rgb(251 146 60 / var(--tw-text-opacity));
 }
 
 @media (min-width: 768px){
@@ -1206,12 +1282,20 @@ ul li a {
     margin-top: 4rem;
   }
 
+  .lg\:mt-10{
+    margin-top: 2.5rem;
+  }
+
   .lg\:flex{
     display: flex;
   }
 
   .lg\:grid{
     display: grid;
+  }
+
+  .lg\:h-\[500px\]{
+    height: 500px;
   }
 
   .lg\:w-\[750px\]{
