--- a/src/input.css
+++ b/src/input.css
@@ -13,6 +13,7 @@ body {
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
 }
 .wer-wir {
   background-image: url("./img/about.jpeg");
