--- a/src/main.css
+++ b/src/main.css
@@ -657,6 +657,10 @@ video {
   margin-bottom: 1.75rem;
 }
 
+.mt-10{
+  margin-top: 2.5rem;
+}
+
 .mt-14{
   margin-top: 3.5rem;
 }
@@ -681,6 +685,10 @@ video {
   margin-top: 1rem;
 }
 
+.mt-8{
+  margin-top: 2rem;
+}
+
 .mt-\[-18px\]{
   margin-top: -18px;
 }
@@ -693,8 +701,16 @@ video {
   margin-top: 6%;
 }
 
-.mt-8{
-  margin-top: 2rem;
+.mt-\[83px\]{
+  margin-top: 83px;
+}
+
+.mt-\[90px\]{
+  margin-top: 90px;
+}
+
+.mt-\[88px\]{
+  margin-top: 88px;
 }
 
 .flex{
@@ -709,12 +725,12 @@ video {
   height: 40px;
 }
 
-.h-full{
-  height: 100%;
-}
-
 .h-auto{
   height: auto;
+}
+
+.h-full{
+  height: 100%;
 }
 
 .w-\[100px\]{
@@ -753,12 +769,12 @@ video {
   grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 
-.grid-rows-4{
-  grid-template-rows: repeat(4, minmax(0, 1fr));
-}
-
 .grid-rows-2{
   grid-template-rows: repeat(2, minmax(0, 1fr));
+}
+
+.grid-rows-4{
+  grid-template-rows: repeat(4, minmax(0, 1fr));
 }
 
 .flex-col{
@@ -781,16 +797,20 @@ video {
   gap: 3.5rem;
 }
 
+.gap-20{
+  gap: 5rem;
+}
+
+.gap-32{
+  gap: 8rem;
+}
+
 .gap-4{
   gap: 1rem;
 }
 
 .gap-48{
   gap: 12rem;
-}
-
-.gap-32{
-  gap: 8rem;
 }
 
 .rounded{
@@ -801,12 +821,12 @@ video {
   border-width: 2px;
 }
 
-.border-t{
-  border-top-width: 1px;
-}
-
 .border-b-2{
   border-bottom-width: 2px;
+}
+
+.border-t{
+  border-top-width: 1px;
 }
 
 .border-gray-200{
@@ -831,6 +851,11 @@ video {
   background-color: #000000c2;
 }
 
+.bg-\[\#EFFFEF\]{
+  --tw-bg-opacity: 1;
+  background-color: rgb(239 255 239 / var(--tw-bg-opacity));
+}
+
 .bg-\[\#f7f7f7\]{
   --tw-bg-opacity: 1;
   background-color: rgb(247 247 247 / var(--tw-bg-opacity));
@@ -844,11 +869,6 @@ video {
 .bg-black{
   --tw-bg-opacity: 1;
   background-color: rgb(0 0 0 / var(--tw-bg-opacity));
-}
-
-.bg-\[\#EFFFEF\]{
-  --tw-bg-opacity: 1;
-  background-color: rgb(239 255 239 / var(--tw-bg-opacity));
 }
 
 .bg-cover{
@@ -906,14 +926,6 @@ video {
   padding-bottom: 3rem;
 }
 
-.pt-12{
-  padding-top: 3rem;
-}
-
-.pt-14{
-  padding-top: 3.5rem;
-}
-
 .pb-3{
   padding-bottom: 0.75rem;
 }
@@ -930,8 +942,36 @@ video {
   padding-top: 2.5rem;
 }
 
+.pt-12{
+  padding-top: 3rem;
+}
+
+.pt-14{
+  padding-top: 3.5rem;
+}
+
 .pt-4{
   padding-top: 1rem;
+}
+
+.pt-\[90px\]{
+  padding-top: 90px;
+}
+
+.pt-\[76px\]{
+  padding-top: 76px;
+}
+
+.pt-\[50px\]{
+  padding-top: 50px;
+}
+
+.pt-\[45px\]{
+  padding-top: 45px;
+}
+
+.pb-10{
+  padding-bottom: 2.5rem;
 }
 
 .text-center{
@@ -986,12 +1026,24 @@ video {
   font-size: 18px;
 }
 
+.text-\[20px\]{
+  font-size: 20px;
+}
+
 .text-\[21px\]{
   font-size: 21px;
 }
 
+.text-\[26px\]{
+  font-size: 26px;
+}
+
 .text-\[35px\]{
   font-size: 35px;
+}
+
+.text-\[55px\]{
+  font-size: 55px;
 }
 
 .text-base{
@@ -1002,14 +1054,6 @@ video {
 .text-xs{
   font-size: 0.75rem;
   line-height: 1rem;
-}
-
-.text-\[26px\]{
-  font-size: 26px;
-}
-
-.text-\[55px\]{
-  font-size: 55px;
 }
 
 .font-bold{
@@ -1028,6 +1072,10 @@ video {
   text-transform: uppercase;
 }
 
+.capitalize{
+  text-transform: capitalize;
+}
+
 .leading-6{
   line-height: 1.5rem;
 }
@@ -1038,6 +1086,10 @@ video {
 
 .leading-8{
   line-height: 2rem;
+}
+
+.leading-10{
+  line-height: 2.5rem;
 }
 
 .tracking-\[2px\]{
@@ -1083,14 +1135,19 @@ video {
   color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
+.text-red-500{
+  --tw-text-opacity: 1;
+  color: rgb(239 68 68 / var(--tw-text-opacity));
+}
+
 .text-white{
   --tw-text-opacity: 1;
   color: rgb(255 255 255 / var(--tw-text-opacity));
 }
 
-.text-red-500{
+.text-\[\#333\]{
   --tw-text-opacity: 1;
-  color: rgb(239 68 68 / var(--tw-text-opacity));
+  color: rgb(51 51 51 / var(--tw-text-opacity));
 }
 
 .opacity-50{
@@ -1109,12 +1166,12 @@ video {
   transition-duration: 150ms;
 }
 
-.duration-700{
-  transition-duration: 700ms;
-}
-
 .duration-300{
   transition-duration: 300ms;
+}
+
+.duration-700{
+  transition-duration: 700ms;
 }
 
 body {
@@ -1126,6 +1183,7 @@ body {
   height: 100vh;
   background-repeat: no-repeat;
   background-size: cover;
+  background-position: center center;
 }
 
 .wer-wir {
@@ -1210,6 +1268,11 @@ ul li a {
   color: rgb(251 146 60 / var(--tw-text-opacity));
 }
 
+.hover\:text-orange-500:hover{
+  --tw-text-opacity: 1;
+  color: rgb(249 115 22 / var(--tw-text-opacity));
+}
+
 @media (min-width: 768px){
   .md\:mb-0{
     margin-bottom: 0px;
@@ -1278,12 +1341,20 @@ ul li a {
     margin-bottom: 1rem;
   }
 
+  .lg\:mt-10{
+    margin-top: 2.5rem;
+  }
+
   .lg\:mt-16{
     margin-top: 4rem;
   }
 
-  .lg\:mt-10{
-    margin-top: 2.5rem;
+  .lg\:mt-\[76px\]{
+    margin-top: 76px;
+  }
+
+  .lg\:mt-\[88px\]{
+    margin-top: 88px;
   }
 
   .lg\:flex{
@@ -1294,8 +1365,16 @@ ul li a {
     display: grid;
   }
 
+  .lg\:h-\[250px\]{
+    height: 250px;
+  }
+
   .lg\:h-\[500px\]{
     height: 500px;
+  }
+
+  .lg\:w-\[160px\]{
+    width: 160px;
   }
 
   .lg\:w-\[750px\]{
