in FAQ the color will change by click

--- a/src/main.css
+++ b/src/main.css
@@ -749,16 +749,16 @@ video {
   width: 60px;
 }
 
+.w-\[85\%\]{
+  width: 85%;
+}
+
 .w-\[90\%\]{
   width: 90%;
 }
 
 .w-\[96px\]{
   width: 96px;
-}
-
-.w-full{
-  width: 100%;
 }
 
 .flex-1{
@@ -868,6 +868,11 @@ video {
 .border-gray-200{
   --tw-border-opacity: 1;
   border-color: rgb(229 231 235 / var(--tw-border-opacity));
+}
+
+.border-red-100{
+  --tw-border-opacity: 1;
+  border-color: rgb(254 226 226 / var(--tw-border-opacity));
 }
 
 .border-zinc-100{
@@ -1335,10 +1340,6 @@ ul li a {
   color: orange !important;
 }
 
-.faq_title_color {
-  color: orange;
-}
-
 .hover\:cursor-pointer:hover{
   cursor: pointer;
 }
@@ -1373,24 +1374,9 @@ ul li a {
   color: rgb(249 115 22 / var(--tw-text-opacity));
 }
 
-.group[open] .group-open\:rotate-180{
-  --tw-rotate: 180deg;
-  transform: translate(var(--tw-translate-x), var(--tw-translate-y)) rotate(var(--tw-rotate)) skewX(var(--tw-skew-x)) skewY(var(--tw-skew-y)) scaleX(var(--tw-scale-x)) scaleY(var(--tw-scale-y));
-}
-
 @media (min-width: 640px){
-  .sm\:mx-auto{
-    margin-left: auto;
-    margin-right: auto;
-  }
-
   .sm\:rounded-lg{
     border-radius: 0.5rem;
-  }
-
-  .sm\:px-20{
-    padding-left: 5rem;
-    padding-right: 5rem;
   }
 }
 
@@ -1446,6 +1432,10 @@ ul li a {
 
   .md\:w-\[700px\]{
     width: 700px;
+  }
+
+  .md\:w-\[80\%\]{
+    width: 80%;
   }
 
   .md\:grid-cols-2{
